--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -88,3 +88,4 @@ are great, too.
 - link:OpeningAUIInAPopupWindow.asciidoc[Opening a UI in a popup window]
 - link:ViewChangeConfirmations.asciidoc[View change confirmations]
 - link:CreatingABookmarkableApplicationWithBackButtonSupport.asciidoc[Creating a bookmarkable application with back button support]
+- link:BroadcastingMessagesToOtherUsers.asciidoc[Broadcasting messages to other users]
