--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -10,3 +10,4 @@
 - link:CreatingAnApplicationWithDifferentFeaturesForDifferentClients.asciidoc[Creating an application with different features for different clients]
 - link:VAccessControl.asciidoc[V - Access control]
 - link:FindingTheCurrentRootAndApplication.asciidoc[Finding the current root and application]
+- link:CreatingABasicApplication.asciidoc[Creating a basic application]
