--- a/documentation/articles/CreatingYourOwnConverterForString.asciidoc
+++ b/documentation/articles/CreatingYourOwnConverterForString.asciidoc
@@ -1,6 +1,6 @@
-[[creating-your-own-converter-for-string]]
-Creating your own converter for String
---------------------------------------
+[[creating-your-own-converter-for-string-mytype-conversion]]
+Creating your own converter for String - MyType conversion
+----------------------------------------------------------
 
 If you have custom types that you want to represent using the built in
 field components, you can easily create your own converter to take care
