--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -14,3 +14,4 @@
 - link:JasperReportsOnVaadinSample.asciidoc[Jasper reports on Vaadin sample]
 - link:BuildingVaadinApplicationsOnTopOfActiviti.asciidoc[Building Vaadin applications on top of Activiti]
 - link:UsingVaadinInAnExistingGWTProject.asciidoc[Using Vaadin in an existing GWT project]
+- link:UsingPython.asciidoc[Using Python]
