--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -19,4 +19,4 @@
 - link:ScalaAndVaadinHOWTO.asciidoc[Scala and Vaadin how-to]
 - link:UsingHibernateWithVaadin.asciidoc[Using Hibernate with Vaadin]
 - link:AddingJPAToTheAddressBookDemo.asciidoc[Adding JPA to the address book demo]
-- link:SimplifiedRPCusingJavaScript.asciidoc[SimplifiedRPCUsingJavaScript]
+- link:SimplifiedRPCusingJavaScript.asciidoc[Simplified RPC using JavaScript]
