--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -32,3 +32,4 @@
 - link:ShowingExtraDataForGridRows.asciidoc[Showing extra data for Grid rows]
 - link:CreatingATextFieldForIntegerOnlyInputUsingADataSource.asciidoc[Creating a TextField for integer only input using a data source]
 - link:UsingGridWithAContainer.asciidoc[Using Grid with a Container]
+- link:ShowingDataInGrid.asciidoc[Showing data in Grid]
