--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -33,3 +33,4 @@
 - link:CreatingATextFieldForIntegerOnlyInputUsingADataSource.asciidoc[Creating a TextField for integer only input using a data source]
 - link:UsingGridWithAContainer.asciidoc[Using Grid with a Container]
 - link:ShowingDataInGrid.asciidoc[Showing data in Grid]
+- link:UsingGridWithInlineData.asciidoc[Using Grid with inline data]
