--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -34,3 +34,4 @@
 - link:UsingGridWithAContainer.asciidoc[Using Grid with a Container]
 - link:ShowingDataInGrid.asciidoc[Showing data in Grid]
 - link:UsingGridWithInlineData.asciidoc[Using Grid with inline data]
+- link:MigratingFromVaadin7.0ToVaadin7.1.asciidoc[Migrating from Vaadin 7.0 to Vaadin 7.1]
