--- a/documentation/articles/MigratingFromVaadin7.0ToVaadin7.1.asciidoc
+++ b/documentation/articles/MigratingFromVaadin7.0ToVaadin7.1.asciidoc
@@ -1,6 +1,6 @@
-[[migrating-to-vaadin-7.1]]
-Migrating to Vaadin 7.1
------------------------
+[[migrating-from-vaadin-7.0-to-vaadin-7.1]]
+Migrating from Vaadin 7.0 to Vaadin 7.1
+---------------------------------------
 
 This guide describes how to migrate from earlier versions to Vaadin 7.1.
 
